--- a/download/ios/manifest.plist
+++ b/download/ios/manifest.plist
@@ -9,7 +9,7 @@
             <key>kind</key>
             <string>software-package</string>
             <key>url</key>
-            <string>https://go2money.xyz/download/ios/money-ios.ipa</string>
+            <string>https://jch-invite.github.io/invite-jch/download/ios/money-ios.ipa</string>
             </dict>
             <dict>
             <key>kind</key>
